<resources>
    <string name="app_name">MAD Project</string>
    <string name="nurtureu">nurtureU</string>
    <string name="pet_logo">NurtureU Pet Logo</string>
    <string name="adopt_nurtu">
        Adopt, Nurture, Love.
    </string>
    <style name="get_started">

        <item name="android:textSize">40.67sp</item>
        <item name="android:fontFamily">@font/poppins_bold</item>


        <item name="android:textColor">@color/nurtureu_primary_green</item>
    </style>

    <string name="get_started">
        Get Started
    </string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="username">Username</string>

    <string name="welcome_back">
        Welcome Back!
    </string>
    <string name="ready_to_find_your_forever_friend">
        Ready to find your forever friend?
    </string>
    <string name="email">Email</string>
    <string name="sign_up">Sign Up</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="confirm_password">Confirm password</string>

    <style name="welcome_back">
        <item name="android:textSize">40.67sp</item>
        <item name="android:textColor">#7FCFA8</item>
    </style>
    <string name="welcome_back">
        Welcome back!
    </string>

    <style name="ready_to_fi">
        <item name="android:textSize">16sp</item>
        <item name="android:letterSpacing">-0.02</item>
        <item name="android:textColor">#6A89A7</item>
    </style>
    <string name="ready_to_fi">
        Ready to find your forever friend?
    </string>
    <string name="email_id">Email ID</string>

    <string name="password">Password</string>

    <string name="sign_up">Sign up</string>
    <string name="sign_in">Sign in</string>

    <string name="or_sign_up_with">- Or sign up with -</string>

    <string name="or_log_in_with">- Or log in with -</string>

    <string name="remember_me">Remember me</string>

    <string name="already_have_an_account">Already have an account? </string>
    <string name="login">Login</string>

    <string name="dont_have_an_account">Already have an account? </string>
<!--    <string name="sign_up">Login</string>-->


</resources>